reset table metrics - bugfix: table alignment

--- a/css/ccap-biology.less
+++ b/css/ccap-biology.less
@@ -399,10 +399,12 @@ p{
  * Tables TODO: simplify/regroup code block
  ******************************************************/
 .table{ 
-  max-width: @column !important;
+ 
   &.span-all{ 
     table{
-      margin: 1em;
+    /*reset metrics*/
+      margin: 0;
+      padding:0;
       border-style:none !important;
     }
   }
